<resources>
    <string name="app_name">Sped</string>
    <string name="chave_pix">Chave Pix</string>
    <string name="comprar">Adicionar ao carrinho</string>
    <string name="data_de_validade">Data de validade</string>
    <string name="numero_cartao">Número cartão</string>
    <string name="numero_cpf_cnpj">cpf/cnpj</string>
    <string name="numero_celular">celular (00)00000-0000</string>
    <string name="endereco_viacep">Buscar o endereço via CEP</string>
    <string name="email">e-mail</string>
    <string name="aleatoria">chave aleatória</string>
    <string name="numero_cvc">Código segurança</string>
    <string name="quantidade">2</string>
    <string name="confirmar_pagamento">Confirmar pagamento</string>
    <string name="txv_inicio">Sped-Sistema de Pedidos</string>
    <string name="txv_endereco">Endereços de Entrega</string>
    <string name="txv_perfil">Perfil PF</string>
    <string name="txv_login">Login</string>
    <string name="site_pj">Site cliente PJ</string>
    <string name="endereco">Rua/Avenida ...</string>
    <string name="tipoEndereco">Tipo</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="pais">Pais</string>
    <string name="data_nascimento">Data nascimento</string>
    <string name="naturalidade">Naturalidade</string>
    <string name="endereco_numero">Número</string>
    <string name="cep">Cep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sped-Sistema de pedidos</string>
    <string name="nav_header_subtitle">sped@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="salvar">Salvar</string>
    <string name="sairCarousel">Sair</string>
    <string name="ir_comprar">Vamos às Compras</string>
    <string name="promocao_do_dia">Promoções do dia!</string>
    <string name="footer">Mais Promoções ...</string>
    <string name="categoria">Esportes e Informática</string>
    <string name="comidas">Comidas</string>
    <string name="preco_80">R$ 80.00</string>
    <string name="preco_60">R$ 60.00</string>
    <string name="preco_100">R$ 100.00</string>
    <string name="preco_120">R$ 120.00</string>

    <string name="camisa">Camisas Futebol</string>
    <string name="chuteira_futebol">Chuteira futebol</string>
    <string name="meiao">Meião de futebol</string>
    <string name="teclado">Teclado Sansung</string>
    <string name="mouse">Mouse</string>
    <string name="limite_de_endereco">Permitido cadastramento de até 3 endereços</string>
    <string name="falha_ao_criar_endereco">Falha ao criar endereço</string>
    <string name="endereco_salvo_com_sucesso">Endereço salvo com sucesso!</string>
    <string name="endereco_removido_ok">Endereco removido com sucesso!</string>
    <string name="autorizacao">br.com.mantunes.sped</string>
    <string name="promocao_viewpage">Promoções da Semana</string>
    <string name="pessoa_fisica">PF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_start_game">Inicio do dialog</string>
    <string name="cancel">Cancele</string>
    <string name="startar">Start</string>
    <string name="tirar_foto">Tirar uma foto</string>
    <string name="pegar_galeria">Pegar da galeria</string>
    <string name="foto">foto</string>
    <string name="galeria">galeria</string>
    <string name="sair">sair</string>
    <string name="button_positive_foto">\FOTO        \</string>
    <string name="button_negative_galeria">\GALERIA         \</string>
    <string name="button_neutral_sair">SAIR</string>
    <string name="create_file_error"><![CDATA["   <string name=\"create_file_error\">Error occurred creating file: %1$s</string>"]]></string>

</resources>
